SAK-17865
git-svn-id: https://source.sakaiproject.org/svn/mailarchive/trunk@73049 66ffb92e-73f9-0310-93c1-f5514f145a0a